fix up formatting issues

--- a/cli-int.html.md.erb
+++ b/cli-int.html.md.erb
@@ -9,9 +9,9 @@ It's typically necessary to separate passwords, certificates, S3 bucket names et
 <p class="note">Note: Changing structure of a YAML document such as adding an S3 access configuration section is a bit more than just YAML document parameterization. Look into [operations files](cli-int.html) for additional details.</p>
 
 ---
-## Variables
+## <a id="variables"></a>  Variables
 
-Variables provide a way to define parameters for a YAML document. Each variable has a value, one or more reference locations and an optional type and generation options. 
+Variables provide a way to define parameters for a YAML document. Each variable has a value, one or more reference locations and an optional type and generation options.
 
 ### <a id="implicit"></a> Implicit declaration
 
