--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -61,7 +61,7 @@ See [Recent Additions and Updates](recent.html).
     * [Managing stemcells](managing-stemcells.html)
 * [Deploying step-by-step](deploying-step-by-step.html)
 * [CLI v2](cli-v2.html)
-    * [Dependencies](cli-deps.html)
+    * [`create-env` Dependencies](cli-env-deps.html)
     * [Differences between CLI v2 vs v1](cli-global-flags.html)
     * [Global Flags](cli-global-flags.html)
     * [Environments](cli-envs.html)
