--- a/openstack-nova-networking.html.md.erb
+++ b/openstack-nova-networking.html.md.erb
@@ -8,7 +8,7 @@ The OpenStack CPI v28+ uses neutron networking by default. This document describ
 
 1. Configure OpenStack CPI
 
-    Modify [the default template](init-openstack.html#create-manifest). In `properties.openstack`:
+    In `properties.openstack`:
     - add property `use_nova_networking: true`
 
     ```yaml
