--- a/openstack-human-readable-vm-names.html.md.erb
+++ b/openstack-human-readable-vm-names.html.md.erb
@@ -4,7 +4,7 @@ title: Using human-readable VM names instead of UUIDs
 
 <p class="note">Note: This feature is available with bosh-openstack-cpi v23+.</p>
 
-[The default template](init-openstack.html#create-manifest) provided for bosh-init does not make use of this feature. You can enable human-readable VM names in your Director manifest to get VMs with names such as `runner_z1/0` instead of UUIDs such as `vm-3151dbb0-7cea-475b-9ff8-7faa94a8188e`.
+You can enable human-readable VM names in your Director manifest to get VMs with names such as `runner_z1/0` instead of UUIDs such as `vm-3151dbb0-7cea-475b-9ff8-7faa94a8188e`.
 
 1. Enable the human-readable-vm-names feature
 
