--- a/cli-v2.html.md.erb
+++ b/cli-v2.html.md.erb
@@ -2,7 +2,7 @@
 title: CLI v2
 ---
 
-<p class="note">Note: Applies to CLI v2 v2.0.13+.</p>
+<p class="note">Note: Applies to CLI v2 v2.0.16+.</p>
 
 The BOSH Command Line Interface (CLI) is what you use to run BOSH commands. CLI v2 is a new major version of CLI.
 
@@ -11,8 +11,8 @@ The BOSH Command Line Interface (CLI) is what you use to run BOSH commands. CLI 
 
 1. Download the binary for your platform and place it on your `PATH`:
 
-  - [bosh-cli-2.0.13-darwin-amd64](https://s3.amazonaws.com/bosh-cli-artifacts/bosh-cli-2.0.13-darwin-amd64) <span class="sha1">sha1: 0098ee608f89ed3588452d58ee5fa576530dd065</span>
-  - [bosh-cli-2.0.13-linux-amd64](https://s3.amazonaws.com/bosh-cli-artifacts/bosh-cli-2.0.13-linux-amd64) <span class="sha1">sha1: c14ffe1074990427f51d1b06f2f8e5b6b0388bb0</span>
+  - [bosh-cli-2.0.16-darwin-amd64](https://s3.amazonaws.com/bosh-cli-artifacts/bosh-cli-2.0.16-darwin-amd64) <span class="sha1">sha1: 3a443b2643e124991bc26d28e09dd6468db23e4a</span>
+  - [bosh-cli-2.0.16-linux-amd64](https://s3.amazonaws.com/bosh-cli-artifacts/bosh-cli-2.0.16-linux-amd64) <span class="sha1">sha1: 09edb717dcceeb948f109ef882d2a3366f21c5c4</span>
 
     <pre class="terminal">
     $ chmod +x ~/Downloads/bosh-cli-*
@@ -23,7 +23,7 @@ The BOSH Command Line Interface (CLI) is what you use to run BOSH commands. CLI 
 
     <pre class="terminal">
     $ bosh -v
-    version 2.0.x-f73c244-2017-03-27T18:02:15Z
+    version 2.0.16-88aa790-2017-05-02T01:12:20Z
     </pre>
 
     If the output does not begin with `version 2.0...` you are probably executing CLI v1 (Ruby based).
