--- a/windows-sample-release.html.md.erb
+++ b/windows-sample-release.html.md.erb
@@ -89,7 +89,7 @@ $ cd sample-windows-release
 $ bosh create-release --force
 $ bosh upload-release
 $ bosh -d sample-windows-deployment deploy manifest.yml
-<pre/>
+</pre>
 
 For information about deployment basics, see the [Basic Workflow](basic-workflow.html) documenation.
 
