mention tarball creation as example

--- a/cli-v2.html.md.erb
+++ b/cli-v2.html.md.erb
@@ -241,6 +241,7 @@ See [Uploading Stemcells](uploading-stemcells.html).
     $ bosh create-release --tarball /tmp/my-release.tgz
     $ bosh create-release --final
     $ bosh create-release --version 20 --final
+    $ bosh create-release releases/zookeeper/zookeeper-3.yml --tarball /tmp/my-release.tgz
     </pre>
 
 - <a id="finalize-release"></a> `bosh finalize-release release.tgz [--force] [--version=ver] [--dir=dir]`
