Typo: "deploying" needs a "y"

--- a/cli-tunnel.html.md.erb
+++ b/cli-tunnel.html.md.erb
@@ -8,7 +8,7 @@ CLI supports tunneling all of its traffic (HTTP and SSH) through a SOCKS 5 proxy
 
 Common use cases for tunneling through a jumpbox VM include:
 
-- deploing Director VM with `bosh create-env` command
+- deploying Director VM with `bosh create-env` command
 - accessing the Director and UAA APIs
 
 <pre class="terminal">
