--- a/openstack-cpi.html.md.erb
+++ b/openstack-cpi.html.md.erb
@@ -71,6 +71,9 @@ Schema for `cloud_properties` section:
 * **scheduler_hints** [Hash, optional]: Data passed to the OpenStack Filter scheduler to influence its decision where new VMs can be placed. See [VM Anti-Affinity](vm-anti-affinity.html#openstack) for a detailed example. Example: `{ group: af09abf2-2283... }`
 * **root_disk** [Hash, optional]: Custom root disk properties. Requires [`boot_from_volume: true`](https://bosh.io/jobs/openstack_cpi?source=github.com/cloudfoundry-incubator/bosh-openstack-cpi-release#p=openstack.boot_from_volume) to enable cinder-backed boot volumes. Available in v25+.
     * **size** [Integer, required]: Specifies the disk size in gigabytes.
+* **loadbalancer_pools** [Array, optional]:  Array of Hashes defining LBaaSv2 pools to attach this instance to. Requires neutron LBaaSv2 extension and OpenStack Mitaka or newer. Available in v32+.
+    * **name** [String, required]: The name of the LBaaSv2 loadbalancer pool
+    * **port** [Integer, required]: The port exposed on the instance
 
 Example of an `m1.small` instance:
 
@@ -86,7 +89,7 @@ resource_pools:
     availability_zone: east
 ```
 
-Example of an `m1.small` instance locked down by specific security groups:
+Example of an `m1.small` instance, attached to LBaaSv2 pool named 'my-lb-pool'. Instance exposes port 8080 and is locked down by specific security groups:
 
 ```yaml
 resource_pools:
@@ -98,7 +101,10 @@ resource_pools:
   cloud_properties:
     instance_type: m1.small
     availability_zone: east
-    security_groups: [web-workers]
+    security_groups: [bosh-vms, lb-accessible]
+    loadbalancer_pools:
+      - name: my-lb-pool
+        port: 8080
 ```
 
 Example of an `m1.small` instance with custom root disk size of 50GB:
