URL fixes for bad links

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -62,7 +62,7 @@ See [Recent Additions and Updates](recent.html).
 * [Deploying step-by-step](deploying-step-by-step.html)
 * [CLI v2](cli-v2.html)
     * [`create-env` Dependencies](cli-env-deps.html)
-    * [Differences between CLI v2 vs v1](cli-global-flags.html)
+    * [Differences between CLI v2 vs v1](cli-v2-diff.html)
     * [Global Flags](cli-global-flags.html)
     * [Environments](cli-envs.html)
     * [Operations files](cli-ops-files.html)
