--- a/cli-v2.html.md.erb
+++ b/cli-v2.html.md.erb
@@ -958,4 +958,4 @@ See [CPI config](cpi-config.html).
     </pre>
 
 ---
-Next: [Differences between CLI v2 vs v1](cli-global-flags.html)
+Next: [Differences between CLI v2 vs v1](cli-v2-diff.html)
