update links to windows stemcell builder docs

--- a/windows.html.md.erb
+++ b/windows.html.md.erb
@@ -2,8 +2,7 @@
 title: BOSH on Windows
 ---
 
-BOSH can deploy jobs on Windows VMs. Currently available Windows stemcells
-can be found on the [Bosh.io Stemcell Page](http://bosh.io/stemcells). Additionally, there is open source tooling and documentation available to build
+BOSH can deploy jobs on Windows VMs. There is open source tooling and documentation available to build [AWS](https://github.com/cloudfoundry-incubator/aws-light-stemcell-builder), [Azure](https://github.com/cloudfoundry-incubator/bosh-windows-stemcell-builder/blob/master/azure-light-stemcell.md),
 [vSphere](https://github.com/cloudfoundry-incubator/bosh-windows-stemcell-builder/blob/master/create-manual-vsphere-stemcells.md) and [Openstack](https://github.com/cloudfoundry-incubator/bosh-windows-stemcell-builder/blob/master/create-manual-openstack-stemcells.md) stemcells for Windows.
 
 In general Windows BOSH Releases work in the same way as a standard BOSH release. The main difference is that the [monit file](create-release.html#monit) for Linux Releases is structured differently on Windows. Below are specific concerns for jobs on Windows.
