--- a/vsphere-esxi-host-failure.html.md.erb
+++ b/vsphere-esxi-host-failure.html.md.erb
@@ -2,7 +2,7 @@
 title: Recovery from an ESXi Host Failure
 ---
 
-<p class="note">Note: Do not follow this procedure if vSphere HA is enabled and bosh-vsphere-cpi is v30+; vSphere HA will automatically recreate VMs that were on the failed host.</p>
+<p class="note">Note: Do not follow this procedure if vSphere HA is enabled and bosh-vsphere-cpi is v30+; vSphere HA will automatically move all VMs from the failed host to other good hosts.</p>
 
 This topic describes how to recreate VMs in the event of an ESXi host failure.
 The BOSH Resurrector is unable to recreate a VM on a failed ESXi host without
