--- a/init-vsphere.html.md.erb
+++ b/init-vsphere.html.md.erb
@@ -38,6 +38,8 @@ This document shows how to set up new [environment](terminology.html#environment
         -v vcenter_cluster=cluster1
     </pre>
 
+    If Resource Pools want to be utilized, refer to [Deploying BOSH into Resource Pools](init-vsphere-rp.html) for additional CLI flags.
+
     Use the vSphere Web Client to find out and/or create any missing resources listed below:
     - Configure `vcenter_ip` (e.g. '192.168.0.10') with the IP of the vCenter.
     - Configure `vcenter_user` (e.g. 'root') and `vcenter_password` (e.g. 'vmware') with vCenter user name and password.
@@ -48,6 +50,7 @@ This document shows how to set up new [environment](terminology.html#environment
     - Configure `vcenter_disks` (e.g. 'my-bosh-disks') with the name of the VMs folder. Disk folder will be automatically created in the chosen datastore.
     - Configure `vcenter_cluster` (e.g. 'cluster1') with the name of the vSphere cluster. Create cluster under the chosen datacenter in the Clusters tab.
     - Configure `network_name` (e.g. 'VM Network') with the name of the vSphere network. Create network under the chosen datacenter in the Networks tab. Above example uses `10.0.0.0/24` network and Director VM will be placed at `10.0.0.6`.
+    - [Optional] Configure `vcenter_rp` (eg. 'my-bosh-rp') with the name of the vSphere resource pool. Create resource pool under the choosen datacenter in the Clusters tab.
 
     See [vSphere CPI errors](vsphere-cpi.html#errors) for list of common errors and resolutions.
 
