document removal of all addons

--- a/runtime-config.html.md.erb
+++ b/runtime-config.html.md.erb
@@ -49,6 +49,13 @@ addons:
       ca_cert: ...
 ```
 
+<p class="note">Note: To remove all addons, specify empty arrays as follows:</p>
+
+```yaml
+releases:[]
+addons:[]
+```
+
 ---
 ## <a id='releases'></a> Releases Block
 
