fix markdown for addon inclusion rules

--- a/runtime-config.html.md.erb
+++ b/runtime-config.html.md.erb
@@ -88,7 +88,7 @@ An addon is a release job that is colocated on all VMs managed by the Director.
 
 Available inclusion/exclusion rules:
 
-**stemcell** [Array of hashes, optional]
+* **stemcell** [Array of hashes, optional]
   * **os** [String, required]: Matches stemcell's operting system. Example: `ubuntu-trusty`
 * **deployments** [Array of strings, optional]: Matches based on deployment names.
 * **jobs** [Array of hashes, otional]
