--- a/uploading-stemcells.html.md.erb
+++ b/uploading-stemcells.html.md.erb
@@ -2,6 +2,8 @@
 title: Uploading Stemcells
 ---
 
+<p class="note">Note: Applies to CLI v2.</p>
+
 (See [What is a Stemcell?](stemcell.html) for an introduction to stemcells.)
 
 As described earlier, each resource pool references a specific stemcell on the Director. Before the Director can form a deployment, all referenced stemcells must be uploaded to the Director.
@@ -18,48 +20,41 @@ Assuming the CLI is already targeted at the Director, the CLI provides a single 
 - If you have a URL to a stemcell tarball (for example URL provided by bosh.io):
 
     <pre class="terminal">
-    $ bosh upload stemcell [URL] --skip-if-exists
+    $ bosh upload-stemcell URL --sha1 SHA1
     </pre>
 
 - If you have a stemcell tarball on your local machine:
 
     <pre class="terminal">
-    $ bosh upload stemcell ~/Downloads/bosh-stemcell-2751-aws-xen-hvm-ubuntu-trusty-go_agent.tgz --skip-if-exists
+    $ bosh upload-stemcell ~/Downloads/bosh-stemcell-3421.4-warden-boshlite-ubuntu-trusty-go_agent.tgz
     </pre>
 
 Once the command succeeds you can view all uploaded stemcells in the Director:
 
 <pre class="terminal">
-$ bosh stemcells
+$ bosh -e vbox stemcells
+Using environment '192.168.50.6' as client 'admin'
 
-+-----------------------------------------+---------------+---------+--------------+
-| Name                                    | OS            | Version | CID          |
-+-----------------------------------------+---------------+---------+--------------+
-| bosh-aws-xen-hvm-ubuntu-trusty-go_agent | ubuntu-trusty | 2751    | ami-cc27a1a4 |
-| bosh-aws-xen-centos-go_agent            | centos-6      | 2710    | ami-a0a674c8 |
-+-----------------------------------------+---------------+---------+--------------+
+Name                                         Version  OS             CPI  CID
+bosh-warden-boshlite-ubuntu-trusty-go_agent  3421.4*  ubuntu-trusty  -    6c9c002e-bb46-4838-4b73-ff1afaa0aa21
 
-(*) Currently in-use
+(*) Currently deployed
 
-Stemcells total: 2
+1 stemcells
+
+Succeeded
 </pre>
 
 ---
 ## <a id='using'></a> Deployment Manifest Usage
 
-To use uploaded stemcell in your deployment, stemcell needs to be referenced by one of the resource pools:
+To use uploaded stemcell in your deployment, add stemcells:
 
 ```yaml
-resource_pools:
-- name: redis-servers
-  network: default
-
-  # Association with Ubuntu Trusty stemcell for AWS
-  stemcell:
-    name: bosh-aws-xen-hvm-ubuntu-trusty-go_agent
-    version: 2751
-
-  cloud_properties: {instance_type: m1.medium}
+stemcells:
+- alias: default
+  os: ubuntu-trusty
+  version: 3421.4
 ```
 
 ---
