--- a/deployment.html.md.erb
+++ b/deployment.html.md.erb
@@ -8,29 +8,17 @@ The deployment process begins with deciding which Operating System images (stemc
 
 When a deployment manifest is uploaded to a BOSH Director, requested resources are allocated and stored. These resources form a deployment. The deployment keeps track of associated VMs and persistent disks that are attached to the VMs. Over time, as the deployment manifest changes, VMs are replaced and updated. However, persistent disks are retained and are re-attached to the newer VMs.
 
-A user can manage a deployment via its deployment manifest. A deployment manifest contains all needed information for tracking, managing, and updating software on the deployment's VMs. It describes the deployment in an IaaS-agnostic way [1]. For example, to update a Redis cluster (deployment is named 'redis-us') to a later version of a Redis release, one would update few lines in the deployment manifest:
+A user can manage a deployment via its deployment manifest. A deployment manifest contains all needed information for tracking, managing, and updating software on the deployment's VMs. It describes the deployment in an IaaS-agnostic way. For example, to update a Zookeeper cluster (deployment is named 'redis-us') to a later version of a Zookeeper release, one would update few lines in the deployment manifest:
 
 ```yaml
 ---
-name: redis-us
+name: zookeeper
 
 releases:
-- name: redis
-  version: 15.9 # <--- bump version
-
-resource_pools:
-- name: all-machines
-  stemcell:
-    name: bosh-aws-xen-ubuntu-trusty-go_agent
-    version: 2972
-  network: default
-  cloud_properties:
-    instance_type: m1.small
-    availability_zone: us-east-1a
+- name: zookeeper
+  version: 0.0.5
 ...
 ```
-
-[1] There are differences in the deployment manifest depending on which IaaS is used. These differences capture IaaS specific features that the operator decides to use.
 
 ---
 [Back to Table of Contents](index.html#intro)
