--- a/create-release.html.md.erb
+++ b/create-release.html.md.erb
@@ -31,7 +31,7 @@ Then you can do a final release.
 To create the release directory, navigate into the workspace where you want the
 release to be, and run:
 
-  `bosh init release <release_name>`
+  `bosh init-release <release_name>`
 
 You can add the `--git` option to initialize a git repository.
 Use dashes in the release name.
