--- a/cpi-api-v1.html.md.erb
+++ b/cpi-api-v1.html.md.erb
@@ -7,6 +7,11 @@ For an overview of the sequence of CPI calls, the following resources are helpfu
 - [BOSH components](bosh-components.html) and its example component interaction diagram
 - [CLI v2 architecture doc](https://github.com/cloudfoundry/bosh-cli/blob/master/docs/architecture.md#deploy-command-flow) and [`bosh create-env` flow](https://github.com/cloudfoundry/bosh-init/blob/master/docs/init-cli-flow.png) where calls to the CPI are marked as `cloud`.
 
+Examples of API request and response:
+
+- [Building a CPI: RPC - Request](https://bosh.io/docs/build-cpi.html#request)
+- [Building a CPI: RPC - Response](https://bosh.io/docs/build-cpi.html#response)
+
 ---
 ## <a id="glossary"></a> Glossary
 
